--- a/docroot/themes/iucn_who/less/theme/assessments.less
+++ b/docroot/themes/iucn_who/less/theme/assessments.less
@@ -16,6 +16,9 @@
 .iucn-site-wrapper > .container > .row {
   display: flex;
   flex-flow: row wrap;
+  &:before, &:after {
+    display: none;
+  }
 }
 .region-site-title {
   display: flex;
