--- a/docroot/themes/iucn_who/less/theme/paragraphs.less
+++ b/docroot/themes/iucn_who/less/theme/paragraphs.less
@@ -200,6 +200,9 @@
     align-items: center;
     display: flex;
     flex-wrap: wrap;
+    &:before, &:after {
+      display: none;
+    }
     .field--item {
       // @media @grid-mobile {
       //   flex-basis: 50%;
